syntax = "proto3";
 
package notification;
option go_package =".;notification_v1";

//QueueRequest for Queue Request with these defined requirements
message MessageOut{
    string notificationID = 2;
    string profileID = 3;
    string contactID = 4;
    string messageTemplete = 5;
    map<string ,string> messageVariables = 6;
    string language = 7;
    string autosend = 8;
    string channel = 9;
}


message StatusRequest{
    string notificationID = 1;
}

message StatusResponse{
    string notificationID = 1;
    string messageStatus = 2;
    
}

message ReleaseRequest{
    string notificationID = 1;
    string releaseMessage = 2;
}

message MessageIn{
    string notificationID = 1;
    string profileID = 2;
    string contactID = 3;
    string productID = 4;
    string messageType = 5;
    map<string,string> payLoad = 6;
    string language = 7;
    string requestStatus = 8;
}

message SearchRequest{
    string notificationID = 1;
    string date =2;
    string contact =3;
    string message =4;
}


message SearchResponse{
    string notificationID = 1;
    string profileID = 2;
    string productID = 3;
    string language = 4;
    string messageType =5;
    map<string,string> payLoad = 6;
    string requestStatus =7;
}

service NotificationService{

    //Out method for queueing massages as requested
        rpc Out (MessageOut) returns (StatusResponse);
    
    //CommunicationStatus request to determine if notification is prepared or released
        rpc Status (StatusRequest) returns (StatusResponse);
    
    //QueueRelease method for releasing queued massages and returns if notification status if released
        rpc Release (ReleaseRequest) returns (StatusResponse);
    
    //In method is for client request for particular notification respones from system
        rpc In (MessageIn) returns (StatusResponse);

    //Search method is for client request for particular notification details from system
        rpc Search (SearchRequest) returns (stream SearchResponse);
      
    }